--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
       </div>
 
       <div class="content"> 
-
+<!-- 
        <div class="left-col"> 
           <h1>My<br/>Music</h1>
-        </div>
+        </div> -->
 
         <div class="right-col">
          <p>Click here to listen</p>
